# convert_marc_to_iiif_webapp

./: .travis.yml  README.md  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
OLEMarcMigration/: __init__.py
OLEMarcMigration/search/: __main__.py
convert_marc_to_iiif_webapp/: __init__.py
docs/: Makefile  autodoc.rst  conf.py  index.rst  make.bat
tests/: __init__.py  test_convert_marc_to_iiif_webapp.py
