[bumpversion]
current_version = 1.0.0
commit = True
tag = True

[coverage:run]
source = convert_marc_to_iiif_webapp

[pep8]
in-place = True
recursive = True
max-line-length = 100
verbose = 1
exclude = venv, build, dist, .git, __pycache__, docs

[flake8]
max-line-length = 100
ignore = E121,E123,E126,E226,E24,E402,E704,W503,W504
exclude = venv, build, dist, .git, __pycache__, docs

[bumpversion:file:setup.py]

[bumpversion:file:OLEMArcMigration/__init__.py]

[bumpversion:file:OLEMArcMigration/search/__main__.py]

[bumpversion:file:README.md]

[bumpversion:file:docs/conf.py]

[metadata]
license_file = LICENSE

